# pii-redact

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bandit.yaml  constants.py  extract_emails.py  flake8.conf  main.py  pii_redactor.py  pylintrc  pyproject.toml  redact.py  redact_emails.py  redact_test.py  ruff.toml  version.py
.github/workflows/: test.yaml
import_handlers/: __init__.py  constants.py  pst.py  spreadsheet.py  utils.py
requirements/: .base.txt.swp  base.txt  development.txt
test_data/: license_plates.txt
