[project]
name = "pii-redact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bandit>=1.8.3",
    "black>=25.1.0",
    "bump2version>=1.0.1",
    "flake8>=7.2.0",
    "openpyxl==3.0.10",
    "pandas==1.4.3",
    "pre-commit>=4.2.0",
    "pylint==3.3.6",
    "halo==0.0.31",
    "numpy>1.24.2",
    "spacy==3.8.5",
    "ipaddress==1.0.23",
    "phonenumbers==8.13.8",
]
