[project]
name = "pii-redact"
version = "1.0.2"
description = "Redact Personally Identifiable Information from emails"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.0.10",
    "pandas>=1.4.3",
    "halo>=0.0.31",
    "numpy>=1.26.4",
    "spacy>=3.8.5",
    "ipaddress>=1.0.23",
    "phonenumbers>=8.13.8",
    "regex>=2024.11.6",
    "pip>=25.0.1",
]

[tool.uv]
package = false
dev-dependencies = [
    "bandit>=1.8.3",
    "bump2version>=1.0.2",
    "licensecheck>=2025.1.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff==0.11.5",
]

[tool.pyright]
typeCheckingMode = "off"

[tool.bandit]
# Configuration for bandit security checking tool
exclude_dirs = [
    "tests",
    "**/*test.py"
]
[tool.bandit.assert_used]
skips = ['*_test.py']
